--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview",
     "format": "prettier --write .",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "vitest run --reporter=verbose"
   },
   "dependencies": {
     "@picocss/pico": "^2.1.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "classnames": "^2.5.1",
+    "expect": "^30.0.2",
     "jszip": "^3.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -42,12 +46,13 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^9.0.10",
     "globals": "^16.0.0",
+    "jsdom": "^26.1.0",
     "playwright": "^1.53.0",
     "prettier": "^3.5.3",
     "storybook": "^9.0.10",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
-    "vitest": "^3.2.3"
+    "vitest": "^3.2.4"
   }
 }
