--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write .",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "vitest run --reporter=verbose"
+    "test": "vitest run --reporter=verbose",
+    "test:recording": "node test.mjs"
   },
   "dependencies": {
     "@picocss/pico": "^2.1.1",
@@ -23,7 +24,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "stylelint": "^16.20.0",
-    "stylelint-config-prettier": "^9.0.5"
+    "stylelint-config-prettier": "^9.0.5",
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.0",
@@ -49,6 +51,7 @@
     "jsdom": "^26.1.0",
     "playwright": "^1.53.0",
     "prettier": "^3.5.3",
+    "puppeteer": "^24.10.2",
     "storybook": "^9.0.10",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
