--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "vitest run --reporter=verbose",
-    "test:recording": "node test.mjs"
+    "test:recording": "node test.mjs",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@picocss/pico": "^2.1.1",
@@ -47,6 +48,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^9.0.10",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
     "playwright": "^1.53.0",
@@ -56,6 +58,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
+    "vite-plugin-static-copy": "^3.0.2",
     "vitest": "^3.2.4"
   }
 }
