--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "npm run format && tsc -b && vite build",
     "lint": "eslint src --ext .ts,.tsx",
     "preview": "vite preview",
     "format": "prettier --write .",
@@ -13,7 +13,7 @@
     "build-storybook": "storybook build",
     "test": "vitest run --reporter=verbose",
     "test:recording": "node test.mjs",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@picocss/pico": "^2.1.1",
@@ -23,10 +23,7 @@
     "expect": "^30.0.2",
     "jszip": "^3.10.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "stylelint": "^16.20.0",
-    "stylelint-config-prettier": "^9.0.5",
-    "unzipper": "^0.12.3"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.0",
@@ -55,8 +52,11 @@
     "prettier": "^3.5.3",
     "puppeteer": "^24.10.2",
     "storybook": "^9.0.10",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
+    "unzipper": "^0.12.3",
     "vite": "^6.3.5",
     "vite-plugin-static-copy": "^3.0.2",
     "vitest": "^3.2.4"
