--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,10 +21,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+    
+    - name: Install Bun
+      uses: oven-sh/setup-bun@v1
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm install
-    - run: npm run test:recording
+        bun-version: latest  # or specific version like '1.1.3'
+
+    - name: Install dependencies
+      run: bun install
+
+    - name: Run tests
+      run: bun run test:recording
+
+    - name: Build project
+      run: bun run build
