--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,13 +5,12 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,18 +19,18 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Install Bun
-      uses: oven-sh/setup-bun@v1
-      with:
-        bun-version: latest  # or specific version like '1.1.3'
+      - uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: bun install
+      - name: Install Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest # or specific version like '1.1.3'
 
-    - name: Run tests
-      run: bun run test:recording
+      - name: Install dependencies
+        run: bun install
 
-    - name: Build project
-      run: bun run build
+      - name: Run tests
+        run: bun run test.mjs
+
+      - name: Build project
+        run: bun run build
