--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,10 @@ jobs:
         run: bun install
 
       - name: Run tests
-        run: bun run test.mjs
+        run: bun test.mjs
+        timeout-minutes:: 3
+        env:
+          DEBUG: 'true'
 
       - name: Build project
         run: bun run build
