--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,14 +26,32 @@ jobs:
         with:
           bun-version: latest # or specific version like '1.1.3'
 
+      - name: Install system dependencies for Puppeteer
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libx11-xcb1 libxcomposite1 libxdamage1 libxrandr2 \
+            libxss1 libxtst6 libnss3 libasound2 libxshmfence1 \
+            fonts-liberation libappindicator3-1 xdg-utils
+
       - name: Install dependencies
-        run: bun install
+        run: bun install # or npm ci / pnpm install
 
-      - name: Run tests
-        run: bun test.mjs
-        timeout-minutes: 3
-        env:
-          DEBUG: 'true'
+      - name: Build the app
+        run: bun run build # or npm run build
 
-      - name: Build project
-        run: bun run build
+      - name: Start Vite preview server
+        run: bun run preview & # or `vite preview &`
+
+      - name: Wait for app to be ready
+        run: npx wait-on http://localhost:4173
+
+      - name: Run Puppeteer E2E tests
+        run: bun test.mjs # adjust this to your puppeteer test command
+
+      - name: Upload test logs if failed
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: puppeteer-logs
+          path: test-results/ # or wherever you store logs/screenshots
