--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             libx11-xcb1 libxcomposite1 libxdamage1 libxrandr2 \
-            libxss1 libxtst6 libnss3 libasound2 libxshmfence1 \
+            libxss1 libxtst6 libnss3 libasound2-dev libxshmfence1 \
             fonts-liberation libappindicator3-1 xdg-utils
 
       - name: Install dependencies
