--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -55,3 +55,9 @@ jobs:
         with:
           name: puppeteer-logs
           path: test-results/ # or wherever you store logs/screenshots
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
